# Lem-in

./: .gitignore  CMakeLists.txt  Makefile  lem_in
Includes/: lem-in.h
libft/includes/: libft.h
src/: breadth_first_search.c  check_costil.c  error_management.c  main.c  parse_map.c  parse_room.c  parse_roommates.c  parser.c
test_maps/: map_1.txt
